# dotask

./: .gitignore  .~lock.base.docx#  base.docx  base_feladat.docx  main.py  pyproject.toml  requ.txt  test.py
web/: main.py
web/main/home/: urls.py  views.py
web/main/home/templates/: index.html
web/main/main/: settings.py  urls.py
web/templates/: index.html
