[project]
name = "dotask"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "babel==2.17.0",
    "django>=6.0.6",
    "docxcompose==1.4.0",
    "docxtpl==0.19.1",
    "jinja2==3.1.6",
    "markupsafe==3.0.2",
    "python-docx==1.1.2",
    "setuptools==78.1.0",
    "six==1.17.0",
    "typing-extensions==4.13.2",
]
